# wasm-tailwind-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  tailwind.config.js
src/: app.rs  lib.rs
